json request - app layout - fonts

--- a/TesteiOS/TesteiOS/Info.plist
+++ b/TesteiOS/TesteiOS/Info.plist
@@ -51,5 +51,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>DINPro-Medium</string>
+		<string>DINPro-Regular.otf</string>
+	</array>
 </dict>
 </plist>
